LF-4702 Prevent text from wrapping on small screens when multiple units eg 3hr 3min

--- a/packages/webapp/src/components/Widgets/ElapsedTime/styles.module.scss
+++ b/packages/webapp/src/components/Widgets/ElapsedTime/styles.module.scss
@@ -12,12 +12,13 @@
  *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  *  GNU General Public License for more details, see <https://www.gnu.org/licenses/>.
  */
- 
+
 @import '@assets/mixin.scss';
 
 .container {
   display: flex;
   align-items: center;
+  flex: 1 0 auto;
 }
 
 .icon {
